--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<a href="about.html">About Developer</a>
   <meta charset="UTF-8">
   <title>Python with Amit Sir - Login</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
