--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 <a href="about.html">About Developer</a>
   <meta charset="UTF-8">
-  <title>Python with Amit Sir - Login</title>
+  <title>Welcome to Learn Amit Sir - Login</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Firebase SDK -->
