--- a/about.html
+++ b/about.html
@@ -131,7 +131,7 @@
 
   <div class="about-container" id="about">
     <center>
-      <img src="your-profile.jpg" alt="Amit Saha" class="profile-pic" />
+      <img src="IMG_20250421_233429.jpg" alt="Amit Saha" class="profile-pic" />
       <div class="developer-name">Amit Saha</div>
       <div class="developer-role">Frontend Developer | Tech Enthusiast</div>
     </center>
