--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<a href="about.html">About Developer</a>
+<a href="about.html" style="color: #007BFF; text-decoration: none; font-weight: bold;">About Developer</a>
+
   <meta charset="UTF-8">
   <title>Welcome to Learn Amit Sir - Login</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
