--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<a href="about.html" style="color: #007BFF; text-decoration: none; font-weight: bold;">About Developer</a>
+<a href="about.html" style="color: #FFFFFF; text-decoration: none; font-weight: bold;">About Developer</a>
 
   <meta charset="UTF-8">
   <title>Welcome to Learn Amit Sir - Login</title>
